--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,35 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
-    <script src="https://kit.fontawesome.com/3f21023fe6.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/stylesheets/styles.css">
+    <%- include('./partials/head') %> 
 
-</head>
 
 <body class="contact">
-    <header class="row">
-        <nav class="menu">
-            <ul>
-                <li><a href="/">home</a></li>
-                <li><a href="/about">about</a></li>
-                <li><a href="/music">music</a></li>
-                <li><a href="/contact">contact</a></li>
-            </ul>
-        </nav>
-        <nav>
-            <a href="" class="twitter"><i class="fab fa-twitter"></i></a>
-            <a href="" class="facebook"><i class="fab fa-facebook-square"></i></a>
-            <a href="" class="spotify"><i class="fab fa-spotify"></i></a>
-            <a href="" class="apple"><i class="fab fa-apple"></i></a>
-            <a href="" class="amazon"><i class="fab fa-amazon"></i></a>
-            <a href="" class="instagram"><i class="fab fa-instagram"></i></a>
-        </nav>
-    </header>
+    <%- include('./partials/header') %> 
+
     <main>
         <h1>contact //</h1>
         <section>
@@ -38,26 +15,14 @@
         </section>
         <section>
             <h2>contact info</h2>
-            <article>
-                <h4>MANAGEMENT | Karen Blanche</h4>
-                <p><span>email:</span> info@mysite.com</p>
-                <p><span>phone:</span> 123-456-7890</p>
-            </article>
-            <article>
-                <h4>BOOKING | Daniel Ku</h4>
-                <p><span>email:</span> info@mysite.com</p>
-                <p><span>phone:</span> 123-456-7890</p>
-            </article>
-            <article>
-                <h4>LABEL | Wix Records, Jake Coldham</h4>
-                <p><span>email:</span> info@mysite.com</p>
-                <p><span>phone:</span> 123-456-7890</p>
-            </article>
-            <article>
-                <h4>PR | That Girl Pr, Sarah Brookstone</h4>
-                <p><span>email:</span> info@mysite.com</p>
-                <p><span>phone:</span> 123-456-7890</p>
-            </article>
+
+            <% contactos.forEach(contact => { %>
+                <article>
+                    <h4><%= contact.position %>  | <%= contact.name %>  <%= contact.surname %> </h4>
+                    <p><span>email:</span> <%= contact.email %> </p>
+                    <p><span>phone:</span> <%= contact.phone %> </p>
+                </article>
+            <% }) %>
         </section>
 
     </main>
