--- a/views/music.ejs
+++ b/views/music.ejs
@@ -1,36 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Music</title>
-    <script
-      src="https://kit.fontawesome.com/3f21023fe6.js"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="/stylesheets/styles.css">
-  </head>
+  <%- include('./partials/head') %> 
+
 
   <body class="music">
-    <header class="row">
-      <nav class="menu">        
-        <ul >
-          <li><a href="/">home</a></li>
-          <li><a href="/about">about</a></li>
-          <li><a href="/music">music</a></li>
-          <li><a href="/contact">contact</a></li>
-        </ul>
-      </nav>
-      <nav class="redes">
-        <a href=""><i class="fab fa-twitter"></i></a>
-        <a href=""><i class="fab fa-facebook-square"></i></a>
-        <a href=""><i class="fab fa-spotify"></i></a>
-        <a href=""><i class="fab fa-apple"></i></a>
-        <a href=""><i class="fab fa-amazon"></i></a>
-        <a href=""><i class="fab fa-instagram"></i></a>
-      </nav>
-    </header>
+    <%- include('./partials/header') %> 
+
     <main>
       <h1>music //</h1>
       <p>Direct links</p>
